--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,13 @@
   src: url("fonts/Roboto-Medium.ttf") format("truetype");
 }
 
-body {
+html{
   font-family: Roboto;
   font-size: medium;
-  margin-left: 5%;
+}
+
+div { 
+  margin-left: 2%;
   margin-right: auto;
   line-height: 20px;
 }
@@ -26,9 +29,9 @@ body {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 /* Change the color of links on hover */
