--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,29 @@
   src: url("fonts/Roboto-Medium.ttf") format("truetype");
 }
 
-html{
+html {
   font-family: Roboto;
   font-size: medium;
 }
 
-body{
+body {
   padding-bottom: 300px;
 }
 
-div { 
+div {
   margin-left: 5%;
   margin-top: 4%;
   margin-right: auto;
   line-height: 20px;
 }
 
-p, li{
+p,
+li {
   font-size: small;
-  font-weight:80;
+  font-weight: 80;
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
@@ -56,9 +57,8 @@ p, li{
   color: white;
 }
 
-.topnav button {  
+.topnav button {
   border: none;
   background: none;
-  display:none; 
+  display: none;
 }
-
